gcc/testsuite/rust/rustc/ui/generic-associated-types/multiple-type-params-with-unmet-bounds.rs
trait Trait {
    type P<T: Copy, U: Copy>;
}
impl Trait for () {
    type P<T: Copy, U: Copy> = ();
}
fn main() {
    let _: <() as Trait>::P<String, String>;
// { dg-error ".E0277." "" { target *-*-* } .-1 }
}

